# Hand-Invader

./: .gitignore  README.md
Hand-Invader/: hand_gesture_detection.py  pyproject.toml
Hand-Invader/app/: __main__.py
Hand-Invader/app/models/: __init__.py  pipeline.py
Hand-Invader/app/models/auto_agent/: agent.py
Hand-Invader/app/models/hand_clf/: mobilenet_clf.ipynb
Hand-Invader/app/models/hand_detector/: __init__.py  image_dataset.py  util.py
Hand-Invader/app/models/tf_hand_detector/: TrainSSD.ipynb
Hand-Invader/app/util/: eval_util.py  train_util.py
Hand-Invader/hand_invader/models/:  pipeline.py
