[tool.poetry]
name = "hand-invader"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
torch = "^2.1.2"
torchvision = "^0.16.2"
tqdm = "^4.66.1"
matplotlib = "^3.8.2"
opencv-python = "^4.9.0.80"
mediapipe = "^0.10.9"
torchmetrics = "^1.3.0.post0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
